21-eks-Ingress-advanced/7-certDiscovery/0-workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1
spec:
  selector:
    matchLabels:
      app: webapp1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      containers:
      - name: webapp1
        image: stacksimplify/kube-nginxapp1:1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  selector:
    app: webapp1
  ports:
  - port: 80
    targetPort: 80

  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2
spec:
  selector:
    matchLabels:
      app: webapp2
  template:
    metadata:
      labels:
        app: webapp2
    spec:
      containers:
      - name: webapp2
        image: stacksimplify/kube-nginxapp2:1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html
spec:
  selector:
    app: webapp2
  ports:
  - port: 80
    targetPort: 80

  type: NodePort
